--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.2",
-    "scrollreveal": "^4.0.9"
+    "scrollreveal": "^4.0.9",
+    "typed.js": "^2.0.12",
+    "waypoints": "^4.0.1"
   }
 }
